src/test/ui/issues/issue-41394.stderr
error[E0369]: binary operation `+` cannot be applied to type `&str`
  --> $DIR/issue-41394.rs:2:12
   |
LL |     A = "" + 1
   |         -- ^ - {integer}
   |         |
   |         &str
   |
   = note: an implementation of `std::ops::Add` might be missing for `&str`

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-41394.rs:7:9
   |
LL |     A = Foo::A as isize
   |         ^^^^^^^^^^^^^^^ referenced constant has errors

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0080, E0369.
For more information about an error, try `rustc --explain E0080`.
